Update testimonials section and contact number

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ Our journey began with a shared passion for technology and a proven track record
 </section>
 
 <!-- Client Testimonies -->
-<section id="testimonials" class="testimonials section" aria-labelledby="testimonials-title" role="region">
+<!-- <section id="testimonials" class="testimonials section" aria-labelledby="testimonials-title" role="region">
   <div class="container">
     <p class="eyebrow">Stories of success</p>
     <h2 id="testimonials-title" class="testimonials-heading">Client <span class="accent">testimonies</span></h2>
@@ -361,7 +361,7 @@ Our journey began with a shared passion for technology and a proven track record
       </li>
     </ul>
   </div>
-</section>
+</section>  -->
 
 
 <!-- Contact Us (Glass) -->
@@ -482,7 +482,7 @@ Our journey began with a shared passion for technology and a proven track record
     <div class="f-contact">
       <h4 class="f-heading">Contact</h4>
       <ul role="list" class="contact-info">
-        <li><a href="tel:+1234567890">+1 (234) 567‑890</a></li>
+        <li><a href="tel:+91 8928508601">+91 8928508601</a></li>
         <li><a href="mailto:hello@octagram.dev">hello@octagram.dev</a></li>
       </ul>
     </div>
