Remove testimonials section and update contact details
Removed client testimonies section and updated contact information.

--- a/index.html
+++ b/index.html
@@ -292,77 +292,6 @@ Our journey began with a shared passion for technology and a proven track record
   </div>
 </section>
 
-<!-- Client Testimonies -->
-<!-- <section id="testimonials" class="testimonials section" aria-labelledby="testimonials-title" role="region">
-  <div class="container">
-    <p class="eyebrow">Stories of success</p>
-    <h2 id="testimonials-title" class="testimonials-heading">Client <span class="accent">testimonies</span></h2>
-
-    <!-- Slider controls -->
-    <div class="t-controls">
-      <button class="t-btn prev" aria-label="Previous testimonial">‹</button>
-      <button class="t-btn next" aria-label="Next testimonial">›</button>
-    </div>
-
-    <!-- Snap slider -->
-    <ul class="t-scroller" role="list" aria-live="polite">
-      <!-- Card 1 -->
-      <li class="t-card">
-        <div class="t-left">
-          <img class="avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=300&auto=format&fit=crop" alt="Portrait of client" loading="lazy" />
-          <div>
-            <h3 class="client">Melina Lopez</h3>
-            <p class="role">Founder • Circooles</p>
-          </div>
-        </div>
-
-        <div class="t-right">
-          <div class="stars" aria-label="5 out of 5">★★★★★</div>
-          <blockquote class="quote">
-            “Octagram delivered a user‑friendly platform with clean UX and reliable performance; navigating our analytics is now effortless.”
-          </blockquote>
-        </div>
-      </li>
-
-      <!-- Card 2 -->
-      <li class="t-card">
-        <div class="t-left">
-          <img class="avatar" src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=300&auto=format&fit=crop" alt="Portrait of client" loading="lazy" />
-          <div>
-            <h3 class="client">Rahul Verma</h3>
-            <p class="role">CTO • NovaMart</p>
-          </div>
-        </div>
-
-        <div class="t-right">
-          <div class="stars" aria-label="5 out of 5">★★★★★</div>
-          <blockquote class="quote">
-            “From checkout to dashboards, the e‑commerce build is fast, stable, and easy to manage—sales and insights both improved.”
-          </blockquote>
-        </div>
-      </li>
-
-      <!-- Card 3 -->
-      <li class="t-card">
-        <div class="t-left">
-          <img class="avatar" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?q=80&w=300&auto=format&fit=crop" alt="Portrait of client" loading="lazy" />
-          <div>
-            <h3 class="client">Aisha Khan</h3>
-            <p class="role">HR Lead • EduCore</p>
-          </div>
-        </div>
-
-        <div class="t-right">
-          <div class="stars" aria-label="5 out of 5">★★★★★</div>
-          <blockquote class="quote">
-            “The LMS and HRMS modules streamlined onboarding and training; adoption was quick thanks to the intuitive UI.”
-          </blockquote>
-        </div>
-      </li>
-    </ul>
-  </div>
-</section>  -->
-
 
 <!-- Contact Us (Glass) -->
 <section id="contact" class="contact section" aria-labelledby="contact-title" role="form">
@@ -375,8 +304,8 @@ Our journey began with a shared passion for technology and a proven track record
         Get in touch with us now for project estimates or technical guidance; Octagram responds promptly during business hours. 
       </p>
       <ul class="contact-list" aria-describedby="contact-desc" role="list">
-        <li><a href="tel:+1234567890">+1 (234) 567‑890</a></li>
-        <li><a href="mailto:hello@octagram.dev">hello@octagram.dev</a></li>
+        <li><a href="tel:91 8928508601">+91 8928508601</a></li>
+        <li><a href="mailto:kab.webdeveloper@gmail.com">kab.webdeveloper@gmail.com</a></li>
       </ul>
     </div>
 
@@ -483,7 +412,7 @@ Our journey began with a shared passion for technology and a proven track record
       <h4 class="f-heading">Contact</h4>
       <ul role="list" class="contact-info">
         <li><a href="tel:+91 8928508601">+91 8928508601</a></li>
-        <li><a href="mailto:hello@octagram.dev">hello@octagram.dev</a></li>
+        <li><a href="mailto:kab.webdeveloper@gmail.com">kab.webdeveloper@gmail.com</a></li>
       </ul>
     </div>
   </div>
