--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#about">About us</a></li>
         <li><a href="#services">Our services</a></li>
         <li><a href="#work">Our work</a></li>
-        <li><a href="#testimonials">Client testimonies</a></li>
+        <!-- <li><a href="#testimonials">Client testimonies</a></li>-->
         <li><a href="#contact">Contact us</a></li>
       </ul>
     </nav>
